frame: Let GtkContainer handle border-width

https://bugzilla.gnome.org/show_bug.cgi?id=760482